test/parsing/test-parse-error.ipg.golden
S -> for i = 1 to 10 do A;
                         ^
Parse error at line 1, column 26.
Possible following tokens are: '['